Directly read full string instead of bytes and do string construction from those.